# asyncari

./: .appveyor.yml  .coveragerc  .gitignore  .gitlab-ci.yml  CHEATSHEET.rst  Makefile  README.rst  mktag  pyproject.toml  requirements.txt  setup.cfg  setup.py
asyncari/: __init__.py  client.py  model.py  state.py  util.py
ci/: travis.sh
debian/: .gitignore  changelog  control  rules  watch
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst  intro.rst
examples/: bell.py  bridge_example.py  cleanup_bridges.py  example.py  originate_example.py  playback.py  zoomcall
examples/basic/: bridge_example.py  example.py  originate_example.py  playback_example.py
trio_ari/: __init__.py  client.py  model.py  state.py  util.py
