[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncari"
authors = [
    { name = "Matthias Urlichs", email = "matthias@urlichs.de" },
]
license = { file = "LICENSE" }
description = "Asynchronous adapter to the Asterisk ARI interface"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Telephony",
]
keywords = [ "asterisk", "ari" ]
urls = { Homepage = "https://github.com/M-o-a-T/asyncari" }
dependencies = [
    "httpx",
    "anyio >= 4.6",
    "attrs >= 18",
    "asyncwebsockets",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[tool.flake8]
max-line-length=99
ignore="E402,E731,E127,E502,E123,W503"

[tool.towncrier]
package = "asyncari"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/M-o-a-T/asyncari/issues/{issue}>`__"
